--- a/Binary_classification.ipynb
+++ b/Binary_classification.ipynb
@@ -711,7 +711,7 @@
       "source": [
         "\n",
         "---\n",
-        "The data collected in x and y from dataset divided in \"x_train, x_test, y_train, y_test\" frr training & testing purpose \n",
+        "The data collected in x and y from dataset divided in \"x_train, x_test, y_train, y_test\" for training & testing purpose \n",
         "\n",
         "\n",
         "\n"
